# CodexTelegram

./: .env.example  .gitignore  README.md  pyproject.toml
.agents/plugins/: marketplace.json
deploy/systemd/: codex-telegram.service
docs/: MEMORY.md  TELEGRAM_HANDOFF.md
ops/: codex-telegram.service.example
plugins/codex-telegram/: INSTALL_OTHER_PROJECT.md  README.md
plugins/codex-telegram/.codex-plugin/: plugin.json
plugins/codex-telegram/scripts/: common.sh  install.sh  start.sh  status.sh  stop.sh
plugins/codex-telegram/skills/codex-telegram/: SKILL.md
src/codex_telegram/: __init__.py  bot.py  codex_runner.py  config.py  main.py  safety.py  session_store.py
tests/: test_bot_runtime.py  test_codex_runner.py  test_safety.py  test_session_store.py  test_split_message.py
